samples/_failures_safe/1761205439_e4eb06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47d3e371.c: In function ‘main’:
./samples/SAFE/__tmp_47d3e371.c:163:5: error: expected expression at end of input
  163 |     int operation_count =
      |     ^~~
./samples/SAFE/__tmp_47d3e371.c:163:5: error: expected declaration or statement at end of input
